fluxcd/infrastructure/configs/overlays/production/istio-policies/compass/allow-dns-loadbalancer.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-dns-loadbalancer
spec:
  selector:
    matchLabels:
      app: adguard
  action: ALLOW
  rules:
    - from:
        - source:
            ipBlocks:
              - "10.0.0.0/8"
              - "172.16.0.0/12"
              - "192.168.0.0/16"
            notIpBlocks:
              - "192.168.144.0/20"  # exclude pod CIDR
              - "172.22.144.0/24"   # exclude node subnet (hairpin SNAT)
      to:
        - operation:
            ports: ["53", "80", "853"]
