fluxcd/infrastructure/configs/overlays/production/istio-policies/compass/allow-intra-breakglass.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-intra-breakglass
spec:
  selector:
    matchLabels:
      zt.breakglass/pod: "true"
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["compass"]
