fluxcd/infrastructure/configs/overlays/production/istio-policies/compass/allow-netbootxyz-loadbalancer.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-netbootxyz-loadbalancer
spec:
  selector:
    matchLabels:
      app: netbootxyz
  action: ALLOW
  rules:
    - from:
        - source:
            ipBlocks:
              - "10.0.0.0/8"
              - "172.16.0.0/12"
              - "192.168.0.0/16"
            notIpBlocks:
              - "192.168.144.0/20"   # exclude node subnet (hairpin SNAT)
      to:
        - operation:
            ports: ["69"]
    - from:
        - source:
            principals:
              - "cluster.local/ns/gossip-stone/sa/gatus"
      to:
        - operation:
            ports: ["69"]
